Villages master table code